# website

./: .djlintrc  .env.example  .gitignore  .pylintrc  pyproject.toml
app/: apps.py  models.py  urls.py  views.py
app/migrations/: 0001_initial.py
app/templates/app/: base.html
app/templates/app/post/: detail.html  list.html
blog/: models.py  settings.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_post_slug.py
blog/templates/blog/: base.html
blog/templates/blog/post/: detail.html  list.html  share.html
website/: asgi.py  settings.py  urls.py  wsgi.py
