[tool.poetry]
name = "website"
version = "0.1.0"
description = ""
authors = ["Victor <victorze@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "~4.2.0"
environs = "^9.5.0"

[tool.poetry.group.dev.dependencies]
pip = "^23.0.1"
install = "^1.3.5"
ipython = "^8.10.0"
black = "^23.1.0"
djlint = "^1.19.16"
psycopg = {extras = ["binary"], version = "^3.1.8"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
skip-string-normalization = 1
